# midi-synth

./: .clang-format  CMakeLists.txt  common.h  envelope.c  envelope.h  filter.c  filter.h  main.c  oscillator.c  oscillator.h  plot_wave.py  synth.c  synth.h  wavegen.c
